crates/synth-parser/tests/snapshots/fixtures__every_positive_design_parses_clean@component_modem.snap
---
source: crates/synth-parser/tests/fixtures.rs
expression: ast
---
{
  "imports": [],
  "board": {
    "name": "component_modem",
    "statements": [
      {
        "stmt": "layers",
        "count": 4,
        "span": {
          "byte_start": 28,
          "byte_end": 36
        }
      },
      {
        "stmt": "component",
        "refdes": "U1",
        "kind": "modem",
        "part": "bg95",
        "span": {
          "byte_start": 39,
          "byte_end": 65
        }
      }
    ],
    "span": {
      "byte_start": 0,
      "byte_end": 67
    }
  },
  "span": {
    "byte_start": 0,
    "byte_end": 67
  }
}
