crates/synth-parser/tests/snapshots/fixtures__every_positive_design_parses_clean@connect_many.snap
---
source: crates/synth-parser/tests/fixtures.rs
expression: ast
---
{
  "imports": [],
  "board": {
    "name": "connect_many",
    "statements": [
      {
        "stmt": "layers",
        "count": 4,
        "span": {
          "byte_start": 25,
          "byte_end": 33
        }
      },
      {
        "stmt": "component",
        "refdes": "U1",
        "kind": "mcu",
        "part": "rp2350",
        "span": {
          "byte_start": 36,
          "byte_end": 62
        }
      },
      {
        "stmt": "component",
        "refdes": "U2",
        "kind": "secure_element",
        "part": "atecc608",
        "span": {
          "byte_start": 65,
          "byte_end": 104
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "gp0",
          "span": {
            "byte_start": 115,
            "byte_end": 121
          }
        },
        "to": {
          "component": "U2",
          "pin": "sda",
          "span": {
            "byte_start": 125,
            "byte_end": 131
          }
        },
        "span": {
          "byte_start": 107,
          "byte_end": 131
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "gp1",
          "span": {
            "byte_start": 142,
            "byte_end": 148
          }
        },
        "to": {
          "component": "U2",
          "pin": "scl",
          "span": {
            "byte_start": 152,
            "byte_end": 158
          }
        },
        "span": {
          "byte_start": 134,
          "byte_end": 158
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "gp2",
          "span": {
            "byte_start": 169,
            "byte_end": 175
          }
        },
        "to": {
          "component": "U2",
          "pin": "gnd",
          "span": {
            "byte_start": 179,
            "byte_end": 185
          }
        },
        "span": {
          "byte_start": 161,
          "byte_end": 185
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "gp3",
          "span": {
            "byte_start": 196,
            "byte_end": 202
          }
        },
        "to": {
          "component": "U2",
          "pin": "vcc",
          "span": {
            "byte_start": 206,
            "byte_end": 212
          }
        },
        "span": {
          "byte_start": 188,
          "byte_end": 212
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "vdd_io",
          "span": {
            "byte_start": 223,
            "byte_end": 232
          }
        },
        "to": {
          "component": "U2",
          "pin": "vcc",
          "span": {
            "byte_start": 236,
            "byte_end": 242
          }
        },
        "span": {
          "byte_start": 215,
          "byte_end": 242
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "gnd",
          "span": {
            "byte_start": 253,
            "byte_end": 259
          }
        },
        "to": {
          "component": "U2",
          "pin": "gnd",
          "span": {
            "byte_start": 263,
            "byte_end": 269
          }
        },
        "span": {
          "byte_start": 245,
          "byte_end": 269
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "run",
          "span": {
            "byte_start": 280,
            "byte_end": 286
          }
        },
        "to": {
          "component": "U2",
          "pin": "sda",
          "span": {
            "byte_start": 290,
            "byte_end": 296
          }
        },
        "span": {
          "byte_start": 272,
          "byte_end": 296
        }
      },
      {
        "stmt": "connection",
        "from": {
          "component": "U1",
          "pin": "usb_dp",
          "span": {
            "byte_start": 307,
            "byte_end": 316
          }
        },
        "to": {
          "component": "U2",
          "pin": "scl",
          "span": {
            "byte_start": 320,
            "byte_end": 326
          }
        },
        "span": {
          "byte_start": 299,
          "byte_end": 326
        }
      }
    ],
    "span": {
      "byte_start": 0,
      "byte_end": 328
    }
  },
  "span": {
    "byte_start": 0,
    "byte_end": 328
  }
}
