crates/synth-parser/tests/snapshots/fixtures__every_positive_design_parses_clean@diff_pair.snap
---
source: crates/synth-parser/tests/fixtures.rs
expression: ast
---
{
  "imports": [],
  "board": {
    "name": "diff_pair",
    "statements": [
      {
        "stmt": "layers",
        "count": 4,
        "span": {
          "byte_start": 22,
          "byte_end": 30
        }
      },
      {
        "stmt": "diff_pair",
        "pos": "USB_DP",
        "neg": "USB_DN",
        "attrs": [
          {
            "kind": "impedance",
            "literal": "90",
            "unit": "ohm",
            "span": {
              "byte_start": 73,
              "byte_end": 78
            }
          }
        ],
        "span": {
          "byte_start": 33,
          "byte_end": 82
        }
      }
    ],
    "span": {
      "byte_start": 0,
      "byte_end": 84
    }
  },
  "span": {
    "byte_start": 0,
    "byte_end": 84
  }
}
