crates/synth-parser/tests/snapshots/fixtures__every_positive_design_parses_clean@diff_pair_50ohm.snap
---
source: crates/synth-parser/tests/fixtures.rs
expression: ast
---
{
  "imports": [],
  "board": {
    "name": "diff_pair_50ohm",
    "statements": [
      {
        "stmt": "layers",
        "count": 4,
        "span": {
          "byte_start": 28,
          "byte_end": 36
        }
      },
      {
        "stmt": "diff_pair",
        "pos": "SDIO_DAT_P",
        "neg": "SDIO_DAT_N",
        "attrs": [
          {
            "kind": "impedance",
            "literal": "50",
            "unit": "ohm",
            "span": {
              "byte_start": 87,
              "byte_end": 92
            }
          }
        ],
        "span": {
          "byte_start": 39,
          "byte_end": 96
        }
      }
    ],
    "span": {
      "byte_start": 0,
      "byte_end": 98
    }
  },
  "span": {
    "byte_start": 0,
    "byte_end": 98
  }
}
